# Cerno-Agentic-Local-Deep-Research

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  cerno  cerno.bat  cerno_cli.py  costs.py  docker-compose.yaml  dockerfile  dockerfile.frontend  nginx.conf  pyproject.toml  requirements.txt  tasks.py
api/: config.py  llm_registry.py  serializers.py  urls.py  utils.py  views.py
api/agents/: composer.py  e2b_code_execution_agent.py  initial_response_and_planner_agent.py  research_agent.py  step_executor.py  web_scraping_agent.py  web_search_agent.py
api/data/: available_models.json
api/management/commands/: generate.py  test_planner.py  test_stream.py
api/services/: e2b_service.py
core/: settings.py  urls.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/LeftSidebar/: LeftSideBar.css  LeftSideBar.tsx  NewTaskButton.css  NewTaskButton.tsx  SessionItem.css  SessionItem.tsx
frontend/src/components/MainChatWindow/: ChatInput.css  ChatInput.tsx  ChatMessage.css  ChatMessage.tsx  EmptyState.css  EmptyState.tsx  MainChatWindow.css  MainChatWindow.tsx  ModelSelector.css  ModelSelector.tsx
frontend/src/components/RightPanel/: FileBrowserItem.tsx  RightPanel.css  RightPanel.tsx
frontend/src/data/: homePageFeatures.tsx
frontend/src/hooks/: useEventSourceProcessor.ts
